--- a/install.yaml
+++ b/install.yaml
@@ -3564,7 +3564,7 @@ spec:
               fieldPath: metadata.namespace
         - name: KYVERNO_SVC
           value: kyverno-svc
-        image: ghcr.io/kyverno/kyverno:v1.4.1
+        image: ajoop/kyverno:v1.4.1-72-g0b30aea3
         imagePullPolicy: IfNotPresent
         livenessProbe:
           failureThreshold: 2
